--- a/ui/labinfo_window.ui
+++ b/ui/labinfo_window.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>lab_change_window</class>
- <widget class="QWidget" name="lab_change_window">
+ <class>lab_info_window</class>
+ <widget class="QWidget" name="lab_info_window">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -22,9 +22,9 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>60</y>
+     <y>66</y>
      <width>200</width>
-     <height>47</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -36,7 +36,7 @@ border:none;</string>
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>250</y>
+     <y>260</y>
      <width>200</width>
      <height>47</height>
     </rect>
@@ -137,13 +137,13 @@ background-color: rgb(240, 240, 240);</string>
 background-color: rgb(240, 240, 240);</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>50</x>
      <y>60</y>
      <width>128</width>
-     <height>301</height>
+     <height>311</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
