--- a/ui/labchange_window.ui
+++ b/ui/labchange_window.ui
@@ -22,37 +22,43 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>60</y>
+     <y>66</y>
      <width>200</width>
-     <height>47</height>
+     <height>51</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(240, 240, 240);
 border:none;</string>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_4">
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>250</y>
+     <y>260</y>
      <width>200</width>
-     <height>47</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(240, 240, 240);
 border:none;</string>
    </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
   <widget class="QScrollArea" name="scrollArea">
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>320</y>
+     <y>330</y>
      <width>231</width>
-     <height>201</height>
+     <height>191</height>
     </rect>
    </property>
    <property name="font">
@@ -72,7 +78,7 @@ border:none;</string>
       <x>0</x>
       <y>0</y>
       <width>231</width>
-      <height>201</height>
+      <height>191</height>
      </rect>
     </property>
     <property name="font">
@@ -115,7 +121,7 @@ border:none;</string>
      <x>160</x>
      <y>190</y>
      <width>231</width>
-     <height>47</height>
+     <height>51</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -129,7 +135,7 @@ background-color: rgb(240, 240, 240);</string>
      <x>160</x>
      <y>130</y>
      <width>231</width>
-     <height>47</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -143,7 +149,7 @@ background-color: rgb(240, 240, 240);</string>
      <x>50</x>
      <y>60</y>
      <width>111</width>
-     <height>301</height>
+     <height>311</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
