--- a/ui/softwareadd_window.ui
+++ b/ui/softwareadd_window.ui
@@ -57,6 +57,9 @@
     <string notr="true">background-color: rgb(240, 240, 240);
 border:none;</string>
    </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
   <widget class="QTextEdit" name="textEdit">
    <property name="geometry">
@@ -76,42 +79,34 @@ border:none;</string>
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>100</y>
+     <y>106</y>
      <width>200</width>
-     <height>47</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(240, 240, 240);
 border:none;</string>
    </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_3">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>150</y>
-     <width>200</width>
-     <height>47</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(240, 240, 240);
-border:none;</string>
+   <property name="text">
+    <string/>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_4">
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>210</y>
+     <y>220</y>
      <width>200</width>
-     <height>47</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(240, 240, 240);
 border:none;</string>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_5">
@@ -127,6 +122,9 @@ border:none;</string>
     <string notr="true">background-color: rgb(240, 240, 240);
 border:none;</string>
    </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
@@ -134,7 +132,7 @@ border:none;</string>
      <x>51</x>
      <y>51</y>
      <width>77</width>
-     <height>301</height>
+     <height>311</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -181,6 +179,20 @@ border:none;</string>
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QComboBox" name="comboBox">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>166</y>
+     <width>221</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border:none;
+background-color: rgb(240, 240, 240);</string>
+   </property>
   </widget>
  </widget>
  <resources/>
